# deskflow

./: .gitignore  CMakeLists.txt  deploy-mac.sh
cmake/: Libraries.cmake  vcpkg.json.in
deploy/windows/: deploy.cmake  wix-patch.xml.in
src/apps/: CMakeLists.txt
src/apps/deskflow-core/: CMakeLists.txt
src/apps/deskflow-daemon/: CMakeLists.txt
src/apps/deskflow-gui/: CMakeLists.txt
src/apps/deskflow-paste-ext/: CMakeLists.txt  FinderSync.h  FinderSync.m  Info.plist
src/apps/deskflow-paste-ext/DeskflowPaste.xcodeproj/: project.pbxproj
src/apps/res/: deskflow.qrc
src/lib/base/: EventQueue.cpp  EventQueue.h
src/lib/client/: CMakeLists.txt  Client.cpp  Client.h  FileTransferConnection.cpp  FileTransferConnection.h  HelloBack.cpp  ServerProxy.cpp  ServerProxy.h
src/lib/common/: Settings.h
src/lib/deskflow/: CMakeLists.txt  Clipboard.h  ClipboardMeta.cpp  ClipboardMeta.h  ClipboardTransferClient.cpp  ClipboardTransferClient.h  ClipboardTransferServer.cpp  ClipboardTransferServer.h  ClipboardTransferThread.cpp  ClipboardTransferThread.h  ClipboardTransferWorker.cpp  ClipboardTransferWorker.h  FileTransfer.cpp  FileTransfer.h  FileTransferServer.cpp  FileTransferServer.h  IClipboard.h  ProtocolTypes.cpp  ProtocolTypes.h  ServerApp.cpp  ServerApp.h
src/lib/gui/: CMakeLists.txt  FileTransferManager.cpp  FileTransferManager.h  FileTransferMonitor.cpp  FileTransferMonitor.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  OSXHelpers.h  OSXHelpers.mm
src/lib/platform/: CMakeLists.txt  EiScreen.cpp  IMSWindowsClipboardFacade.h  IOSXKeyResource.h  MSWindowsClipboard.cpp  MSWindowsClipboard.h  MSWindowsClipboardBitmapConverter.cpp  MSWindowsClipboardFileConverter.cpp  MSWindowsClipboardFileConverter.h  MSWindowsDataObject.cpp  MSWindowsDataObject.h  MSWindowsDesks.cpp  (+38 more)
translations/: autodeskflow_en.ts  autodeskflow_es.ts  autodeskflow_it.ts  autodeskflow_ja.ts  autodeskflow_ko.ts  autodeskflow_ru.ts  autodeskflow_zh_CN.ts
(+34 files in other folders)
